2015-10-06 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Convert representation type if it is alphafirst on export, or scale filter chokes.

2015-10-06 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Use ImageRep pixelWide and pixelHigh instead of size.

2014-02-05 Riccardo Mottola <rm@gnu.org>

	* FileTable.m (addPathAndRecurse)
	add a local autorelease pool to wasy loading of many images.

2014-02-02 Riccardo Mottola <rm@gnu.org>

	* AppController.m
        Preserve image information during rotation.

2014-01-19 Riccardo Mottola <rm@gnu.org>

	* AppController.m (setFullScreen)
	Release the image from the view being switched out, to save memory.
	Smaller optimization in the image setting calls.

2014-01-19 Riccardo Mottola <rm@gnu.org>

	* AppController.m (changeImage)
	Optimize display in case of rotaded images.

2013-12-24 Riccardo Mottola <rm@gnu.org>

	* AppController.m
        Remove unnecessary [window displayIfNeeded]

2013-12-22 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Add notification observers in awake from nib, not init.

2013-07-14 Riccardo Mottola <rm@gnu.org>

	* AppController.m (execExportImages)
	Rotate image before exporting it, if it had a rotation set.

2013-06-02 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	* LMFlipView.m
	* English.lproj/LaternaMagica.nib
	Route printing to the FlipView and start print operation from there.

2013-06-02 Riccardo Mottola <rm@gnu.org>

	* LMImage.m
        Correctly add successive rotations.

2013-05-27: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* AppController.m, LMFlipView.m
	  revert stuff from yesterday, and only leave the 
	  l and r keys work

2013-05-26: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* AppController.m
	  make rotation clockwise
	* LMFlipView.m
	  add r, f, l keys to performKeyEquivalent:, to call
	  rotateImage90, 180, 270 to be able to rotate with
	  keyboard in full screen mode

2013-02-12 Riccardo Mottola <rm@gnu.org>
