@@ -1,3 +1,8 @@
+2015-10-07 Riccardo Mottola <rm@gnu.org>
+
+	* PRScale.m
+	Fix destination offset with correct bytes per row.
+
 2015-10-06 Riccardo Mottola <rm@gnu.org>
 
 	* AppController.m
